manifests/phasor-extension/dev-eu-central-1/authorization-policy-allow-alloy-scrape.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: allow-alloy-scrape
  namespace: phasor
spec:
  rules:
    - from:
        - source:
            namespaces:
              - alloy
      to:
        - operation:
            ports:
              - "8080"
              - "8081"
