manifests/phasor-extension/dev-eu-central-1/authorization-policy-allow-istio-gateway.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: allow-istio-gateway
  namespace: phasor
spec:
  rules:
    - from:
        - source:
            namespaces:
              - istio-system
